heating-on-demand2: set minmax sensor unit_of_measurement

--- a/packages/bedroom-mark/heating-on-demand.yaml
+++ b/packages/bedroom-mark/heating-on-demand.yaml
@@ -5,6 +5,7 @@ homeassistant:
     sensor.bedroom_mark_temperature:
       friendly_name: "Mark's Bedroom"
       icon: mdi:thermometer
+      unit_of_measurement: "\xB0C"
 
 group:
   g_debug_bedroom_mark_heating:
