--- a/configuration.yaml
+++ b/configuration.yaml
@@ -27,6 +27,8 @@ homeassistant:
     package_hall_heating: !include packages/hall/heating-on-demand.yaml
 
     package_lounge: !include packages/lounge/package.yaml
+    package_lounge_heating: !include packages/lounge/heating-on-demand.yaml
+
     package_library: !include packages/library/package.yaml
     package_ballroom: !include packages/ballroom/package.yaml
     package_armoury: !include packages/armoury/package.yaml
