--- a/default_view.yaml
+++ b/default_view.yaml
@@ -8,6 +8,6 @@ entities:
 - sensor.study_temperature
 - sensor.kitchen_temperature
 - sensor.hall_temperature
-- sensor.lounge_east_temperature
+- sensor.lounge_temperature
 - sensor.library_temperature
 - sensor.ballroom_east_temperature
