--- a/packages/ballroom/scenes.yaml
+++ b/packages/ballroom/scenes.yaml
@@ -4,10 +4,11 @@
       state: off
     group.ballroom_party_lights:
       state: off
-    climate.ballroom_east_thermostat:
+    climate.ballroom_thermostat:
       temperature: 5
     media_player.ballroom:
       state: paused
+
 - name: Ballroom Party
   entities:
     group.ballroom_lights:
@@ -15,16 +16,18 @@
       brightness_pct: 20
     group.ballroom_party_lights:
       state: on
-    climate.ballroom_east_thermostat:
+    climate.ballroom_thermostat:
       temperature: 20
+
 - name: Ballroom Movie
   entities:
     group.ballroom_lights:
       state: off
     group.ballroom_party_lights:
       state: off
-    climate.ballroom_east_thermostat:
+    climate.ballroom_thermostat:
       temperature: 20
+
 - name: Ballroom Bright
   entities:
     group.ballroom_lights:
@@ -32,5 +35,5 @@
       brightness_pct: 100
     group.ballroom_party_lights:
       state: off
-    climate.ballroom_east_thermostat:
+    climate.ballroom_thermostat:
       temperature: 20
