--- a/packages/ballroom/groups.yaml
+++ b/packages/ballroom/groups.yaml
@@ -3,42 +3,37 @@ ballroom:
   view: true
   icon: mdi:projector
   entities:
-  - sensor.ballroom_east_temperature
+  - sensor.ballroom_temperature
   - group.ballroom_compact_ui
   - media_player.ballroom
   - media_player.ballroom_amplifier
+
 ballroom_compact_ui:
   name: Ballroom
   view: false
   icon: mdi:projector
   entities:
   - input_select.ballroom_select
-  - climate.ballroom_east_thermostat
+  - climate.ballroom_thermostat
   - group.ballroom_party_lights
+
 ballroom_scenes:
   name: Ballroom
   view: false
   entities:
   - input_select.ballroom_select
-ballroom_heating:
-  name: Ballroom Heating
-  view: false
-  entities:
-  - climate.ballroom_east_thermostat
+
 ballroom_setpoints:
   name: Ballroom Setpoints
   view: false
   entities:
   - climate.ballroom_east_comfort_setpoint
-ballroom_thermostats:
-  name: Ballroom Thermostats
-  view: false
-  entities:
-  - climate.ballroom_east_thermostat
+
 ballroom_lights:
   name: Ballroom Lights
   icon: mdi:lightbulb-on
   view: false
+
 ballroom_party_lights:
   name: Ballroom Party Lights
   view: false
