heating-on-demand2: kitchen
kitchen_temperature name conflict.
Renamed min/max sensor to kitchen_mean_temperature

--- a/automation/heating-on-demand-v2.yaml
+++ b/automation/heating-on-demand-v2.yaml
@@ -4,6 +4,8 @@
     - platform: state
       entity_id: climate.study_thermostat
     - platform: state
+      entity_id: climate.kitchen_thermostat
+    - platform: state
       entity_id: climate.hall_thermostat
     - platform: state
       entity_id: climate.lounge_thermostat
