--- a/default_view.yaml
+++ b/default_view.yaml
@@ -6,7 +6,7 @@ entities:
 - group.bedroom_scenes
   # badges
 - sensor.study_temperature
-- sensor.kitchen_temperature
+- sensor.kitchen_mean_temperature
 - sensor.hall_temperature
 - sensor.lounge_temperature
 - sensor.library_temperature
