heating-on-demand2: library

--- a/automation/heating-on-demand-v2.yaml
+++ b/automation/heating-on-demand-v2.yaml
@@ -10,6 +10,8 @@
     - platform: state
       entity_id: climate.lounge_thermostat
     - platform: state
+      entity_id: climate.library_thermostat
+    - platform: state
       entity_id: climate.ballroom_thermostat
     - platform: state
       entity_id: climate.bedroom_mark_thermostat
