--- a/configuration.yaml
+++ b/configuration.yaml
@@ -31,6 +31,7 @@ homeassistant:
     package_lounge_heating: !include packages/lounge/heating-on-demand.yaml
 
     package_library: !include packages/library/package.yaml
+    package_library_heating: !include packages/library/heating-on-demand.yaml
 
     package_ballroom: !include packages/ballroom/package.yaml
     package_ballroom_heating: !include packages/ballroom/heating-on-demand.yaml
