--- a/automation/heating-on-demand-v2.yaml
+++ b/automation/heating-on-demand-v2.yaml
@@ -15,6 +15,8 @@
       entity_id: climate.ballroom_thermostat
     - platform: state
       entity_id: climate.bedroom_mark_thermostat
+    - platform: state
+      entity_id: climate.bedroom_ros_thermostat
   action:
     - service: climate.set_temperature
       data_template:
