--- a/configuration.yaml
+++ b/configuration.yaml
@@ -43,7 +43,10 @@ homeassistant:
     package_bedroom_mark_heating: !include packages/bedroom-mark/heating-on-demand.yaml
 
     package_bedroom_jerome: !include packages/bedroom-jerome/package.yaml
+
     package_bedroom_ros: !include packages/bedroom-ros/package.yaml
+    package_bedroom_ros_heating: !include packages/bedroom-ros/heating-on-demand.yaml
+
     #package_room: !include packages/room/package.yaml
 
     package_lounge_media_dimming: !include packages/lounge-media-dimming.yaml
