--- a/groups.yaml
+++ b/groups.yaml
@@ -14,7 +14,7 @@ bedrooms:
   - group.bedroom_ros_compact_ui
   - group.guest_room_compact_ui
   - sensor.bedroom_mark_temperature
-  - sensor.bedroom_ros_temperature
+  - sensor.bedroom_ros_mean_temperature
   - sensor.js_bedroom_temperature
   - sensor.js_bedroom_humidity
 
@@ -113,7 +113,7 @@ annex_heating_demand:
   entities:
   - switch.study_demand
   - switch.annex_hall_demand
-  - switch.ross_bedroom_demand
+  - switch.bedroom_ros_demand
 
 room_scenes:
   name: Rooms
@@ -243,7 +243,7 @@ temperatures:
   - sensor.study_east_current_temperature
   - sensor.study_west_current_temperature
   - sensor.js_bedroom_temperature
-  - sensor.bedroom_ros_temperature
+  - sensor.bedroom_ros_current_temperature
 
 thermostat_devices:
   name: Thermostat Devices
