--- a/packages/bedroom-ros/automations/calendar.yaml
+++ b/packages/bedroom-ros/automations/calendar.yaml
@@ -33,7 +33,7 @@
           {% if "ros" in l %}
           {%   set u = "bedroom_ros" %}
           {% endif %}
-          group.{{u}}_thermostats
+          climate.{{u}}_thermostat
         temperature: >
           {% set l = trigger.to_state.attributes.message.lower().split() %}
           {{l|last|float}}
