heating-on-demand-v2: bedroom_jerome

--- a/automation/heating-on-demand-v2.yaml
+++ b/automation/heating-on-demand-v2.yaml
@@ -19,6 +19,9 @@
       entity_id: climate.bedroom_mark_thermostat
     - platform: state
       entity_id: climate.bedroom_ros_thermostat
+    ## bedroom_jerome ui uses js_bedroom thermostat directly
+    #- platform: state
+    #- entity_id: climate.bedroom_jerome_thermostat
   action:
     - service: climate.set_temperature
       data_template:
