--- a/automation/heating-on-demand-v2.yaml
+++ b/automation/heating-on-demand-v2.yaml
@@ -8,6 +8,8 @@
     - platform: state
       entity_id: climate.hall_thermostat
     - platform: state
+      entity_id: climate.annex_hall_thermostat
+    - platform: state
       entity_id: climate.lounge_thermostat
     - platform: state
       entity_id: climate.library_thermostat
