--- a/configuration.yaml
+++ b/configuration.yaml
@@ -26,6 +26,7 @@ homeassistant:
 
     package_hall: !include packages/hall/package.yaml
     package_hall_heating: !include packages/hall/heating-on-demand.yaml
+    package_annex_hall_heating: !include packages/hall/annex-hall-heating-on-demand.yaml
 
     package_lounge: !include packages/lounge/package.yaml
     package_lounge_heating: !include packages/lounge/heating-on-demand.yaml
