--- a/device_tracker.yaml
+++ b/device_tracker.yaml
@@ -11,9 +11,12 @@
 
 - platform: nmap_tracker
   hosts: 192.168.7.1-254
-  home_interval: 30
+  interval_seconds: 30
+  home_interval: 20
   track_new_devices: yes
   consider_home: 1800
+  exclude:
+    - 192.168.7.3
 
 - platform: bluetooth_tracker
 
@@ -22,8 +25,8 @@
 #  username: root
 #  password: XXXX
 
-- platform: unifi
-  host: hastur
-  username: !secret unifi_username
-  password: !secret unifi_password
-  verify_ssl: False
+#- platform: unifi
+#  host: hastur
+#  username: !secret unifi_username
+#  password: !secret unifi_password
+#  verify_ssl: False
