--- a/packages/ballroom/groups.yaml
+++ b/packages/ballroom/groups.yaml
@@ -16,6 +16,7 @@ ballroom_compact_ui:
   - input_select.ballroom_select
   - climate.ballroom_thermostat
   - group.ballroom_party_lights
+  - group.g_ballroom_media_dimming
 
 ballroom_scenes:
   name: Ballroom
