ballroom: turn off amplifier for scene Off

--- a/packages/ballroom/scenes.yaml
+++ b/packages/ballroom/scenes.yaml
@@ -8,6 +8,8 @@
       temperature: 5
     media_player.ballroom:
       state: paused
+    media_player.ballroom_amplifier:
+      state: off
 
 - name: Ballroom Party
   entities:
