--- a/packages/kitchen/groups.yaml
+++ b/packages/kitchen/groups.yaml
@@ -6,6 +6,7 @@ kitchen:
   - sensor.kitchen_mean_temperature
   - group.kitchen_compact_ui
   - media_player.kitchen
+  - media_player.kitchen_speaker
   - sensor.greenwave_powernode_54_energy
   - sensor.greenwave_powernode_54_power
 
