--- a/configuration.yaml
+++ b/configuration.yaml
@@ -56,6 +56,7 @@ homeassistant:
     package_bedroom_mark_media_dimming: !include packages/bedroom-mark-media-dimming.yaml
 
     package_modem_scraper: !include packages/modem_scraper.yaml
+    package_dinner_time: !include packages/dinner-time.yaml
 
 config:
 discovery:
