--- a/mqtt-dasher/config.yml
+++ b/mqtt-dasher/config.yml
@@ -6,9 +6,12 @@ mqtt:
 buttons:
   # listerine
   ac:63:be:59:7d:5b: ha/dash/dinner
+  # huggies
+  44:65:0d:3f:61:65: ha/dash/party
+  # catsan
+  ac:63:be:99:83:b7: ha/dash/table-tennis
+
   ac:63:be:cd:16:11: ha/dash/on
   50:f5:da:2e:f8:84: ha/dash/philips-sonicare
   ac:63:be:0f:af:79: ha/dash/ariel
-  44:65:0d:3f:61:65: ha/dash/huggies
-  ac:63:be:99:83:b7: ha/dash/catsan
   44:65:0d:22:ba:96: ha/dash/right-guard
