--- a/packages/dinner-time.yaml
+++ b/packages/dinner-time.yaml
@@ -31,6 +31,7 @@ script:
         entity_id: group.dinner_announcers
         message: "Dinner will be ready in ten minutes."
 
+# listerine
 switch:
   - name: dinner_time
     platform: mqtt
