--- a/packages/table-tennis.yaml
+++ b/packages/table-tennis.yaml
@@ -10,11 +10,12 @@ homeassistant:
       friendly_name: "Table Tennis Mode"
 
 
+# catsan
 switch:
   - name: table_tennis
     platform: mqtt
-    command_topic: ha/dash/catsan
-    state_topic: ha/dash/catsan
+    command_topic: ha/dash/table-tennis
+    state_topic: ha/dash/table-tennis
     payload_on: 'active'
     payload_off: 'inactive'
 
