--- a/automation/heating-on-demand-v2.yaml
+++ b/automation/heating-on-demand-v2.yaml
@@ -19,6 +19,8 @@
       entity_id: climate.bedroom_mark_thermostat
     - platform: state
       entity_id: climate.bedroom_ros_thermostat
+    - platform: state
+      entity_id: climate.guest_room_thermostat
     ## bedroom_jerome ui uses js_bedroom thermostat directly
     #- platform: state
     #- entity_id: climate.bedroom_jerome_thermostat
