--- a/packages/guest_room/groups.yaml
+++ b/packages/guest_room/groups.yaml
@@ -3,28 +3,26 @@ guest_room:
   icon: mdi:hotel
   view: false
   entities:
+  - sensor.guest_room_mean_temperature
   - group.guest_room_compact_ui
+
 guest_room_compact_ui:
   name: Guest Room
   view: false
   icon: mdi:hotel
   entities:
   - input_select.guest_room_select
-  - climate.danfoss_z_thermostat_014g0013_heating_1
+  - climate.guest_room_thermostat
+
 guest_room_scenes:
   name: Guest Room
   view: false
   entities:
   - input_select.guest_room_select
-guest_room_heating:
-  name: Guest Room Heating
-  view: false
-  entities:
-  - climate.danfoss_z_thermostat_014g0013_heating_1
+
 guest_room_setpoints:
   name: Guest Room Setpoints
   view: false
   entities:
-  - climate.danfoss_z_thermostat_014g0013_heating_1
-
+  - climate.guest_room_heat
 
