dev: guest room eurotronic spiritz thermostat and temperature

--- a/automation/heating-on-demand.yaml
+++ b/automation/heating-on-demand.yaml
@@ -111,6 +111,8 @@
 #      entity_id: climate.annex_hall_comfort_setpoint
 #    - platform: state
 #      entity_id: climate.bedroom_ros_comfort_setpoint
+#    - platform: state
+#      entity_id: climate.guest_room_heat
 #  action:
 #    #- service: climate.set_temperature
 #    #  data_template:
