--- a/packages/guest_room/scripts/hue-thermostat.yaml
+++ b/packages/guest_room/scripts/hue-thermostat.yaml
@@ -3,5 +3,5 @@ hue_guest_room_thermostat:
     - service: climate.set_temperature
       data_template:
         temperature: "{{ requested_level }}"
-        entity_id: climate.danfoss_z_thermostat_014g0013_heating_1
+        entity_id: climate.guest_room_thermostat
 
