live: update jerome presence devices

--- a/people/jerome.yaml
+++ b/people/jerome.yaml
@@ -3,8 +3,9 @@ control: hidden
 entities:
 - device_tracker.jerome_phone
 - device_tracker.jerome_android
+- device_tracker.jeromes_phone
 #- device_tracker.jerome_android_bt
 #- device_tracker.jdilley_macbookpro
 - device_tracker.jerome_asus
 - device_tracker.jerome_asus_bt
-- sensor.js_bedroom_present
+#- sensor.js_bedroom_present
