live: zwave polling for spiritz temperatures

--- a/zwave_device_config.yaml
+++ b/zwave_device_config.yaml
@@ -34,3 +34,9 @@ sensor.annex_hall_temperature:
 sensor.bedroom_ros_temperature:
   polling_intensity: 5
   ignored: false
+sensor.guest_room_temperature:
+  ignored: false
+  polling_intensity: 5
+sensor.spiritz_70_temperature:
+  ignored: false
+  polling_intensity: 5
