ballroom mode: per-mode setpoints, reset to Manual for manual changes.

--- a/packages/ballroom/groups.yaml
+++ b/packages/ballroom/groups.yaml
@@ -5,6 +5,7 @@ ballroom:
   entities:
   - sensor.ballroom_temperature
   - group.ballroom_compact_ui
+  - group.ballroom_settings_ui
   - media_player.ballroom
   - media_player.ballroom_amplifier
 
@@ -13,10 +14,19 @@ ballroom_compact_ui:
   view: false
   icon: mdi:projector
   entities:
-  - input_select.ballroom_select
+  - input_select.ballroom_mode
   - climate.ballroom_thermostat
   - group.ballroom_party_lights
   - group.g_ballroom_media_dimming
+
+ballroom_settings_ui:
+  name: Settings
+  icon: mdi:settings
+  entities:
+    - input_number.ballroom_temperature_off
+    - input_number.ballroom_temperature_party
+    - input_number.ballroom_temperature_movie
+    - input_number.ballroom_temperature_bright
 
 ballroom_scenes:
   name: Ballroom
