--- a/packages/ballroom/settings.yaml
+++ b/packages/ballroom/settings.yaml
@@ -2,6 +2,7 @@ group:
   g_ballroom_settings_ui:
     name: Settings
     icon: mdi:settings
+    control: hidden
     entities:
       - input_number.ballroom_temperature_off
       - input_number.ballroom_temperature_party
